# glimmer

./: .gitignore  Cargo.toml  LICENSE  README  README.md  build.rs  build.sh  inspect.sh
crates/obfstr/: Cargo.toml
crates/obfstr-macros/: Cargo.toml
crates/obfstr-macros/src/: lib.rs
crates/obfstr/src/: lib.rs
data/: repomd.xml
docs/adr/: 0001-rust-over-go.md  0002-dual-layer-encryption.md  0003-root-secret-derivation.md  0004-raw-syscalls-over-lib-networking.md  0005-buildtime-xor-string-encoding.md  0006-exponential-distribution-beacon-timing.md  0007-identity-from-hostname-machine-id.md  0008-error-codes-not-error-strings.md  0009-nightly-rust-build-std-path-elimination.md  0010-structured-yara-output-cross-source-correlation.md  0011-auditd-connect-rule-runtime-network-monitoring.md
src/: antidebug.rs  cfg.rs  channel_raw.rs  crypto.rs  debug.rs  dns.rs  errlog.rs  errors.rs  identity.rs  keystore.rs  lib.rs  obfuscate.rs  proto.rs  raw_tcp.rs  strings.rs  sys.rs  sys_libc.rs
src/c2/: dnf.rs  http.rs  mod.rs
